first implementation of gui